DFD-337 fix overflow table at disc-page

--- a/lms/static/sass/discussion/views/_home.scss
+++ b/lms/static/sass/discussion/views/_home.scss
@@ -104,6 +104,10 @@ nav.wrapper-course-material {
     }
   }
 
+  .home-helpgrid-cover {
+    overflow-x: scroll;
+  }
+
   .home-helpgrid {
     border-bottom: none;
     border-radius: $forum-border-radius;
